syntax = "proto3";

package Dd;

//
// Messages
//
message GetRequest {
  string key = 1;
}

message GetResponse {
  bool found = 1;
  string value = 2;
  string node = 3;
}

message SetRequest {
  string key = 1;
  string value = 2;
}

message SetResponse {
  bool success = 1;
}

message GetAllRequest {
}

message GetAllResponse {
  repeated string keys = 1;
}

//
// Services
//
service DictionaryService {
  rpc Get (GetRequest) returns (GetResponse);
  rpc Set (SetRequest) returns (SetResponse);
  rpc GetAll (GetAllRequest) returns (GetAllResponse);
}